syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "AbilitySyncStateInfo.proto";
import "EntityRendererChangedInfo.proto";
import "SceneEntityAiInfo.proto";
import "Vector.proto";
import "AnimatorParameterValueInfoPair.proto";

message EntityAuthorityInfo {
	AbilitySyncStateInfo ability_info = 1;
	EntityRendererChangedInfo renderer_changed_info = 2;
	SceneEntityAiInfo ai_info = 3;
	Vector born_pos = 4;
	repeated AnimatorParameterValueInfoPair pose_para_list = 5;
}
